--- a/resume/kurly/index.html
+++ b/resume/kurly/index.html
@@ -15,7 +15,7 @@
 				"1" : 4,
 				"2" : 3,
 				"3" : 8,
-				"4" : 4
+				"4" : 6
 			};
 
 			$(".detail").click(function(){
@@ -145,7 +145,9 @@
 		<div class="portfolio-info" id="info-1">
 			<div class="info-title">베개 3호<br>Wege vol.3</div>
 			<div class="info-detail">Book Design<br>-<br>
-				2018.06 - 2018.07<br>148*210mm, 292p</br>Adobe Illustrator, Indesign</div>
+				2018.06 - 2018.07<br>148*210mm, 292p</br>Adobe Illustrator, Indesign<br>-<br>
+				<a href="https://tumblbug.com/neulbo3" target="_blank">tumblbug</a><br>
+				<a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=159906635" target="_blank">aladin</a></div>
 		</div>
 		<div class="portfolio-img" id="img-1-1">
 			<div class="detail left" id="left-1"><</div>
@@ -182,7 +184,9 @@
 			<div class="detail right" id="right-4">></div>
 		</div>
 
-		<div id="view-more" class="box">View more portfolio in<br>>> <a href="http://at-fence.ml">at-fence.ml</a> <<</div>
+		<div id="view-more" class="box">View more portfolio in<br>
+			>> <a href="http://at-fence.ml" target="_blank">at-fence.ml</a> <<
+		</div>
 	</div>
 
 	<div class="empty-box"></div>
@@ -190,7 +194,7 @@
 	<div class="wrapper" id="self-intro">
 		<div id="intro-title" class="box">Dear Kurly.</div>
 		<div id="intro-ko" class="box">
-			<div class="intro-paragraph"> 안녕하세요. 마켓컬리 디자이너 인턴에 지원하고자 이력서 보냅니다. 
+			<div class="intro-paragraph"> 안녕하세요. 마켓컬리 디자이너 인턴에 지원하고자 이력서 보냅니다.
 			<br><br></div><div class="intro-paragraph">저는 무엇이든 만드는 것을 좋아합니다. 학생 때 머릿속으로 상상한 것들을 실제로 만들고 싶다는 생각에 그래픽 툴을 스스로 공부하기 시작하였고, 여러 종류의 그래픽 프로그램들을 아주 능숙하게 다룰 수 있게 되었습니다. 그러나 이 기술을 이용하여 일하면서, 어떻게 만드느냐 그다지 중요하지 않다는 것을 알게 되었습니다. 그보다는 무엇을 만드느냐, 무엇을 상상하느냐가 일의 즐거움, 흥미, 보람에 더 크게 영향을 주었습니다. 아무리 제가 잘할 수 있는 업무여도, 제가 흥미가 없고, 혹은 불편한 내용인 경우, 디자인 작업이 그저 반복적인 업무로만 느껴졌고, 내가 흥미 있는 내용의 업무에 대한 열망은 더욱 커졌습니다.
 			<br><br></div><div class="intro-paragraph">2년 전, 혼자 살기 시작하면서, 음식을 만드는 것에도 흥미가 생겼습니다. 식재료들을 하나하나 사서 요리를 하면서, 이전까지는 생각하지 못했던 주제들이 눈에 보이기 시작하였습니다. “어떻게 해야 더 맛있을까?”, “이 계절에 어떤 재료가 제철일까?” 같은 작은 궁금증부터, “각 식재료들이 어떻게 생산되었을까?”, “공장식으로 닭을 밀집 사육하면서 달걀을 생산하는 것은 비윤리적이지 않을까?”, “앞으로 나는 고기를 어떻게 먹어야 할까?” 하는 사회적인 주제들이 제 삶을 구성하게 되었습니다.
 			<br><br></div><div class="intro-paragraph">제가 좋아하는 주제들과 맞닿아 있는 이곳에서 일한다면, 저의 긍정적 역량을 더욱 더 발휘할 수 있을 것이라 확신합니다. 한국의 파머스마켓인 마켓컬리에서 함께 재미있게 일하고 싶습니다.
