--- a/resume/kurly/index.html
+++ b/resume/kurly/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SONG</title>
+	<title>SONG JIN KYEONG</title>
 	<meta name="viewport" content="width=device-width">
 	<meta charset="utf-8">
 
