--- a/resume/kurly/index.html
+++ b/resume/kurly/index.html
@@ -99,9 +99,9 @@
 		<div id="excel" class="box">컴퓨터활용능력 2급</div>
 		<div id="excel-info" class="box">2012.02 / 대한상공회의소</div>
 		<div id="graphics" class="box">컴퓨터그래픽스운용기능사</div>
-		<div id="graphics-info" class="box">2013.02 / 한국인력뭐시기공단</div>
+		<div id="graphics-info" class="box">2013.02 / 한국산업인력공단</div>
 		<div id="accounting" class="box">전산회계운용기능사 3급</div>
-		<div id="accounting-info" class="box">2015.05 / 한국인력</div>
+		<div id="accounting-info" class="box">2015.05 / 대한상공회의소</div>
 	</div>
 
 	<div class="empty-box"></div>
